--- a/suha_vs_mokra_cesta.ipynb
+++ b/suha_vs_mokra_cesta.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 10,
    "id": "64a58a18",
    "metadata": {},
    "outputs": [
@@ -17,7 +17,7 @@
       "STOJI & SUHA: 5444 \n",
       "STOJI & MOKRA: 1714\n",
       "\n",
-      "Karambolov v stacionarne objekte (npr. parkiran avto, stavba, itd.) na mokri cesti je bilo 4.9936% več kot karambolov v stacionarne objekte na suhi cesti.\n"
+      "Karambolov v stacionarne objekte (npr. parkiran avto, stavba, itd.) je bilo na mokri (ali poledeneli, poškodovani) cesti 4.9936% več kot karambolov v stacionarne objekte na suhi (nepoškodovani) cesti.\n"
      ]
     }
    ],
@@ -28,42 +28,36 @@
     "nesreca = pd.read_csv('./baze/manjse/Nesreca.csv')\n",
     "\n",
     "\n",
-    "merged_df = pd.merge(faktor_cest, nesreca[['ZaporednaStevilkaOsebeVPN', 'TipNesrece']], on='ZaporednaStevilkaOsebeVPN')\n",
+    "df = pd.merge(faktor_cest, nesreca[['ZaporednaStevilkaOsebeVPN', 'TipNesrece']], on='ZaporednaStevilkaOsebeVPN')\n",
     "\n",
-    "final_df = merged_df[['StanjeVozisca', 'TipNesrece']]\n",
+    "df = df[['StanjeVozisca', 'TipNesrece']]\n",
     "\n",
     "# odstrani vozisca in tipe nesrec v neznanem stanju\n",
-    "final_df = final_df.loc[final_df['StanjeVozisca'] != 'OSTALO']\n",
-    "final_df = final_df.loc[final_df['TipNesrece'] != 'OSTALO']\n",
+    "df = df.loc[df['StanjeVozisca'] != 'OSTALO']\n",
+    "df = df.loc[df['TipNesrece'] != 'OSTALO']\n",
+    "# print(\"Unique values in StanjeVozisca:\", df['StanjeVozisca'].unique())\n",
+    "# print(\"\\nUnique values in TipNesrece:\", df['TipNesrece'].unique())\n",
     "\n",
-    "# print(\"Unique values in StanjeVozisca:\", final_df['StanjeVozisca'].unique())\n",
-    "# print(\"\\nUnique values in TipNesrece:\", final_df['TipNesrece'].unique())\n",
+    "# obdrži vrstice s StanjeVozisca = SUHO, ostale pa preimenuj v DRUGACNO\n",
+    "df.loc[df['StanjeVozisca'] != 'SUHO', 'StanjeVozisca'] = 'DRUGACNO'\n",
     "\n",
+    "df['TipNesrece_new'] = 'SE PREMIKA'\n",
+    "mask = (df['TipNesrece'] == 'TRČENJE V STOJEČE / PARKIRANO VOZILO') | (df['TipNesrece'] == 'TRČENJE V OBJEKT')\n",
+    "df.loc[mask, 'TipNesrece_new'] = 'STACIONAREN'\n",
     "\n",
-    "new_df = final_df.copy()\n",
+    "mask = (df['TipNesrece'] == 'BOČNO TRČENJE') | (df['TipNesrece'] == 'OPLAŽENJE') | (df['TipNesrece'] == 'NALETNO TRČENJE') | (df['TipNesrece'] == 'POVOŽENJE ŽIVALI') | (df['TipNesrece'] == 'POVOŽENJE PEŠCA') | (df['TipNesrece'] == 'ČELNO TRČENJE')\n",
+    "df.loc[mask, 'TipNesrece_new'] = 'SE PREMIKA'\n",
     "\n",
-    "# obdrži vrstice s StanjeVozisca = SUHO, ostale pa preimenuj z DRUGACNO\n",
-    "new_df.loc[new_df['StanjeVozisca'] != 'SUHO', 'StanjeVozisca'] = 'DRUGACNO'\n",
-    "# print(\"Unique values in StanjeVozisca:\", new_df['StanjeVozisca'].unique())\n",
+    "df.drop(columns=['TipNesrece'], inplace=True)\n",
+    "df.rename(columns={'TipNesrece_new': 'TipNesrece'}, inplace=True)\n",
     "\n",
+    "# print(\"Unique values in StanjeVozisca:\", df['StanjeVozisca'].unique())\n",
+    "# print(\"Unique values in TipNesrece:\", df['TipNesrece'].unique())\n",
     "\n",
-    "new_df['TipNesrece_new'] = 'SE PREMIKA'\n",
-    "\n",
-    "mask = (new_df['TipNesrece'] == 'TRČENJE V STOJEČE / PARKIRANO VOZILO') | (new_df['TipNesrece'] == 'TRČENJE V OBJEKT')\n",
-    "new_df.loc[mask, 'TipNesrece_new'] = 'STACIONAREN'\n",
-    "\n",
-    "mask = (new_df['TipNesrece'] == 'BOČNO TRČENJE') | (new_df['TipNesrece'] == 'OPLAŽENJE') | (new_df['TipNesrece'] == 'NALETNO TRČENJE') | (new_df['TipNesrece'] == 'POVOŽENJE ŽIVALI') | (new_df['TipNesrece'] == 'POVOŽENJE PEŠCA') | (new_df['TipNesrece'] == 'ČELNO TRČENJE')\n",
-    "new_df.loc[mask, 'TipNesrece_new'] = 'SE PREMIKA'\n",
-    "\n",
-    "new_df.drop(columns=['TipNesrece'], inplace=True)\n",
-    "new_df.rename(columns={'TipNesrece_new': 'TipNesrece'}, inplace=True)\n",
-    "\n",
-    "# print(\"Unique values in TipNesrece:\", new_df['TipNesrece'].unique())\n",
-    "\n",
-    "suhoSVC = new_df['StanjeVozisca'].value_counts()['SUHO']\n",
-    "drugacnoSVC = new_df['StanjeVozisca'].value_counts()['DRUGACNO']\n",
-    "sepremikaTNC = new_df['TipNesrece'].value_counts()['SE PREMIKA']\n",
-    "stacionarenTNC = new_df['TipNesrece'].value_counts()['STACIONAREN']\n",
+    "suhoSVC = df['StanjeVozisca'].value_counts()['SUHO']\n",
+    "drugacnoSVC = df['StanjeVozisca'].value_counts()['DRUGACNO']\n",
+    "sepremikaTNC = df['TipNesrece'].value_counts()['SE PREMIKA']\n",
+    "stacionarenTNC = df['TipNesrece'].value_counts()['STACIONAREN']\n",
     "\n",
     "print(\"STOJI:\", stacionarenTNC)\n",
     "# print(\"PREMIKA:\", sepremikaTNC)\n",
@@ -71,10 +65,10 @@
     "print(\"MOKRA:\", drugacnoSVC)\n",
     "\n",
     "\n",
-    "ms = len(new_df[(new_df['StanjeVozisca'] == 'DRUGACNO') & (new_df['TipNesrece'] == 'STACIONAREN')])\n",
-    "ss = len(new_df[(new_df['StanjeVozisca'] == 'SUHO') & (new_df['TipNesrece'] == 'STACIONAREN')])\n",
-    "# mp = len(new_df[(new_df['StanjeVozisca'] == 'DRUGACNO') & (new_df['TipNesrece'] == 'SE PREMIKA')])\n",
-    "# sp = len(new_df[(new_df['StanjeVozisca'] == 'SUHO') & (new_df['TipNesrece'] == 'SE PREMIKA')])\n",
+    "ms = len(df[(df['StanjeVozisca'] == 'DRUGACNO') & (df['TipNesrece'] == 'STACIONAREN')])\n",
+    "ss = len(df[(df['StanjeVozisca'] == 'SUHO') & (df['TipNesrece'] == 'STACIONAREN')])\n",
+    "# mp = len(df[(df['StanjeVozisca'] == 'DRUGACNO') & (df['TipNesrece'] == 'SE PREMIKA')])\n",
+    "# sp = len(df[(df['StanjeVozisca'] == 'SUHO') & (df['TipNesrece'] == 'SE PREMIKA')])\n",
     "\n",
     "print(\"\\nSTOJI & SUHA:\", ss, \"\\nSTOJI & MOKRA:\", ms)\n",
     "\n",
@@ -86,7 +80,7 @@
     "\n",
     "percentage_difference = abs((r1 - r2) / ((r1 + r2) / 2)) * 100\n",
     "\n",
-    "print(f\"\\nKarambolov v stacionarne objekte (npr. parkiran avto, stavba, itd.) na mokri cesti je bilo {round(percentage_difference, 4)}% več kot karambolov v stacionarne objekte na suhi cesti.\")"
+    "print(f\"\\nKarambolov v stacionarne objekte (npr. parkiran avto, stavba, itd.) je bilo na mokri (ali poledeneli, poškodovani) cesti {round(percentage_difference, 4)}% več kot karambolov v stacionarne objekte na suhi (nepoškodovani) cesti.\")"
    ]
   }
  ],
