--- a/Grafi in zemljevid posledic.ipynb
+++ b/Grafi in zemljevid posledic.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "a856452f",
    "metadata": {
     "scrolled": false
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "e2489caa",
    "metadata": {},
    "outputs": [
@@ -133,7 +133,7 @@
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "from sklearn.preprocessing import MinMaxScaler\n",
+    "# from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "faktor_oseb = pd.read_csv('./baze/manjse/FaktorOseb.csv')\n",
     "\n",
@@ -151,8 +151,8 @@
     "podatki = podatki[~podatki['PoskodbaUdelezenca'].isin(['BREZ POŠKODBE', 'BREZ POŠKODBE-UZ'])]\n",
     "\n",
     "\n",
-    "podatki['VrednostAlkotesta'] = podatki['VrednostAlkotesta'].str.replace(',', '.').astype(float)\n",
-    "podatki['VrednostStrokovnegaPregleda'] = podatki['VrednostStrokovnegaPregleda'].str.replace(',', '.').astype(float)\n",
+    "podatki['VrednostAlkotesta'] = podatki['VrednostAlkotesta'].astype(str).str.replace(',', '.').astype(float)\n",
+    "podatki['VrednostStrokovnegaPregleda'] = podatki['VrednostStrokovnegaPregleda'].astype(str).str.replace(',', '.').astype(float)\n",
     "\n",
     "\n",
     "\n",
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "1a40dd4a",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
