--- a/Grafi in zemljevid posledic.ipynb
+++ b/Grafi in zemljevid posledic.ipynb
@@ -162,7 +162,7 @@
     "\n",
     "plt.figure(figsize=(10, 6))\n",
     "sns.countplot(x='UporabaVarnostnegaPasu', hue='PoskodbaUdelezenca', data=podatki)\n",
-    "plt.title('Vpliv uporabe varnostnega pasu na izvid poškodbe')\n",
+    "plt.title('Vpliv uporabe varnostnega pasu na izid poškodbe')\n",
     "plt.xlabel('Uporaba varnostnega pasu')\n",
     "plt.ylabel('Število primerov')\n",
     "plt.legend(title='Poskodba udeleženca', loc='upper right')\n",
