--- a/Poročilo.ipynb
+++ b/Poročilo.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "**Ali izkušnje na cesti oz. obdobje imetja izpita vpliva na število povzročenih nesreč?**\n",
     "\n",
-    "Ugotovitev: Po naših rezultatih smo opazili, da med mladostniki in starostniki ni opaženega večjega vpliva obdobja imetja izpita na udeležencih v prometnih nesrečah:\n",
+    "Ugotovitev: S skupino nas je še posebaj zanimalo to vprašanje, saj pogovori po poročilih in podobno pogosto izpostavljajo mlade voznike kot pogoste povzročitelje nesreč.Po naših rezultatih smo opazili, da med mladimi vozniki in starostniki, po količini, ni bilo opažene večje razlike prometnih nesreč:\n",
     "\n",
     "- Procent nesreč, ki jih je povzročil mladi voznik: 9.38%,\n",
     "- Procent nesreč, ki jih je povzročil stari voznik: 10.45%."
@@ -70,7 +70,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b25b844f",
    "metadata": {},
@@ -90,7 +89,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ebdfefb3",
    "metadata": {},
@@ -148,7 +146,9 @@
    "source": [
     "**Ali čas dneva in dan v tednu vplivata na število nesreč?**\n",
     "\n",
-    "**Ugotovitev:** Iz toplotnega zemljevida je razvidno da imata dan in čas velik vpliv na število nesreč, in sicer po rezultatih naj bi bil najbolj kritičen dan petek popoldne. Zakaj pride do več nesreč v tem času je lahko več razlogov, npr. ljudje prihajajo domov iz službe itd. Nesreče so povezane z prometnimi konicami.\n",
+    "**Ugotovitev:** Iz toplotnega zemljevida je jasno razvidno, da dan in čas vplivata na število nesreč, in sicer po rezultatih naj bi bil najbolj kritičen dan petek , ter čas popoldne. Razlogi za povečano število popoldanskih nesreč so najverjetneje povezane z večjo količino vozil po delu, ob petkih pa povečano gostoto najverjetneje povzročijo tedenski selilci.\n",
+    "\n",
+    "Nesreč je najman ponoči, saj je tudi takrat promet bolj redek. Po rezultatih lahko sklepamo da je količina nesreč očino kolinearna z količino prometa.\n",
     "\n",
     "Graf:\n",
     "![Figure_3.png](attachment:Figure_3.png)"
@@ -184,7 +184,7 @@
    "source": [
     "**V katerem letnem času je največ nesreč? ali na le te vpliva vreme?**\n",
     "\n",
-    "**Ugotovitve:** Razvidno je, da je največ prometnih nesreč začetek jeseni, v mesecu Septembru.\n",
+    "**Ugotovitve:** Po toplotni sliki se močno razvidi razliko med mrzlimi in toplimi meseci. Eden od možnih indikatorjev je priklučitev motornih vozil in kolesarjev, ki se povečuje z boljšim vremenom. Prvi mesec z več nesrečami je Junij, ki pa je tudi mesec začetka počitnic, zato ljudje tud več potujejo. Drugi dvig količine nesreč pa je septembra, sklepamo da zaradi vstopa v novo šolsko leto.\n",
     "\n",
     "Graf:\n",
     "![Figure_4.png](attachment:Figure_4.png)"
