--- a/Poročilo.ipynb
+++ b/Poročilo.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e8fbdde3",
    "metadata": {},
@@ -9,6 +10,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ffa2c21b",
    "metadata": {},
@@ -20,6 +22,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "618ee329",
    "metadata": {},
@@ -30,6 +33,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9ce3a165",
    "metadata": {},
@@ -38,6 +42,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4b29b62c",
    "metadata": {},
@@ -70,6 +75,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b25b844f",
    "metadata": {},
@@ -77,7 +83,6 @@
     "**Katera skupina večkrat ne upošteva cestnih pravil?**\n",
     "\n",
     "**Ugotovitev:** Po tabeli je razvidno da je velik delež nesreč zaradi neupoštevanja cestih pravil povzročen v starostni skupini 20+ let, kar nam pove da se z časom ljudem veča možnost nesreče zaradi neupoštevanja pravil. Vrednosti sta podobni prejšnji ugotovitvi.\n",
-    "\n",
     "| Leta izpita| procent nesreč|\n",
     "|-|-|\n",
     "| <1 | 0.047% |\n",
@@ -89,13 +94,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ebdfefb3",
    "metadata": {},
    "source": [
     "**Ali mladi udeleženci res povzročijo številčnejše število nesreč kot ostali udeleženci? So to morda starejši?**\n",
     "\n",
-    "**Ugotovitev:** Tabela nakazuje da so mladi udeleženci v starostni skupini med 18 in 25 let povzročili največ nesreč, takoj za njimi pa starostna skupina 40 do 49 letniki.\n",
+    "**Ugotovitev:** Po tabelei vidimo da se staroste skupine med seboj ne razlikujejo veliko, razen skupina 18-25 let, ki povroči veliko manj nesreč. Teh voznikov je seveda manj od ostalih starostnih skupin.\n",
     "\n",
     "|starostna skupina | procent nesreč|\n",
     "|-|-|\n",
@@ -120,13 +126,14 @@
    "source": [
     "**Ali spol in starost res vplivata na kakovost voznika?**\n",
     "\n",
-    "**Ugotovitve:** čeprav nimamo podatkov o vseh voznikih na cestah, lahko iz grafa sklepamo, da je večina nesreč povzročenih zaradi moških\n",
+    "**Ugotovitve:** Čeprav nimamo podatkov o vseh voznikih na cestah, je iz grafa razvidno, da večino nesreč po vseh starostnih skupinah povzročijo moški. Spol sam po sebi ni neposreden pokazatelj kakovosti voznika. Naši podatki kažejo, da večino nesreč povzročijo moški, kar je vrejetno le posledica večje zastopanosti moških voznikov na cestah, ter drugih dejavnikov, kot so vedenje za volanom, slog vožnje ali izpostavljenost tveganjem. Seveda se ob tem moramo zavedati da je v splošnem večja količina tovornih in potniških voznikov moških.\n",
     "\n",
     "Graf:\n",
     "![prenos.png](attachment:prenos.png)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "be0bff20",
    "metadata": {},
@@ -146,9 +153,14 @@
    "source": [
     "**Ali čas dneva in dan v tednu vplivata na število nesreč?**\n",
     "\n",
-    "**Ugotovitev:** Iz toplotnega zemljevida je jasno razvidno, da dan in čas vplivata na število nesreč, in sicer po rezultatih naj bi bil najbolj kritičen dan petek , ter čas popoldne. Razlogi za povečano število popoldanskih nesreč so najverjetneje povezane z večjo količino vozil po delu, ob petkih pa povečano gostoto najverjetneje povzročijo tedenski selilci.\n",
+    "**Ugotovitev:** Iz toplotnega zemljevida je jasno razvidno, da dan in čas vplivata na število nesreč, in sicer po rezultatih naj bi bil najbolj kritičen dan petek , ter čas popoldne. \n",
     "\n",
-    "Nesreč je najman ponoči, saj je tudi takrat promet bolj redek. Po rezultatih lahko sklepamo da je količina nesreč očino kolinearna z količino prometa.\n",
+    "Glede na ugotovitev, da je petek najbolj kritičen dan, bi lahko predvideli vpliv več dejavnikov. Petek je pogosto povezan s koncem delovnega tedna, ko ljudje morda želijo čim prej priti domov ali se odpraviti na potovanje. To lahko povzroči večjo gostoto prometa in večjo verjetnost nesreč.\n",
+    "Prav tako je razvidno, da je čas popoldne najbolj kritičen. V tem času je promet običajno najbolj gost zaradi končanja delovnega dneva, šolskega pouka in drugih dnevnih dejavnosti. \n",
+    "\n",
+    "Nesreč je najman ponoči, saj je tudi takrat promet bolj redek. Manj vozil na cestah lahko zmanjša možnost trčenj in drugih prometnih incidentov.\n",
+    "\n",
+    "Po rezultatih lahko sklepamo da je količina nesreč očino kolinearna z količino prometa.\n",
     "\n",
     "Graf:\n",
     "![Figure_3.png](attachment:Figure_3.png)"
@@ -166,7 +178,7 @@
    "source": [
     "**Ali nekateri dnevi npr. petek, sobota izstopajo z alkoholom?**\n",
     "\n",
-    "**Ugotovitve:** Po rezultatih je razvidno da z alkoholom najbolj izstopa sobota, takoj za tem pa petek. Te ugotovitve lahko povežemo s prejšnjimi rezultati o številu nesreč po dnevu in času.\n",
+    "**Ugotovitve:** Rezultate lahko povežemo z prejšnim grafom. Res je, petek in sobota sta pogosto dneva, ko se odvijajo različni zabavni dogodki, druženja in praznovanja. Ti dogodki pogosto vključujejo uživanje alkohola, kar v primeru vožnje poveča možnost nesreče. Alkohol vpliva na odzivni čas in motorične sposobnosti, kar privede do večjega tveganja za prometne nesreče.\n",
     "\n",
     "Graf:\n",
     "![output.png](attachment:output.png)"
@@ -204,21 +216,30 @@
     "\n",
     "**Ugotovitve:** Najpogostejši nesreči v več vremenskih pogojih sta premik z vozilom in neprilagojena hitrost. Razlog za to je najverjetneje stanje na cestah ob slabih vremenskih razmerah.\n",
     "\n",
+    "Neprilagojena hitrost je najpogostejši povzročitel prometnih nesreč v splošnem po Sloveniji, to tveganje se še posebaj poveča v primeru slabega vremena, pomanjkanje oprijema na zasneženi ali poledenele cesti lahko povzroči zdrs in izgubo nadzora nad vozilom.\n",
+    "\n",
+    "Megla, lahko močno zmanjša vidlivost na cesti, kar voznikom otežuje zaznavanje drugih vozil, ovir ali sprememb v prometu. To lahko poveča tveganje trčenja. \n",
+    "\n",
+    " \n",
+    "\n",
     "Graf:\n",
     "![wAz6RQ4ndRiogAAAABJRU5ErkJggg.png](attachment:wAz6RQ4ndRiogAAAABJRU5ErkJggg.png)"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e6b05f9e",
    "metadata": {},
    "source": [
     "**Kateri tipi ceste so najbolj nevarni? (suha proti mokra)**\n",
     "\n",
-    "**Ugotovitve:** Naleti v stacionarne objekte (npr. parkiran avto, stavba, itd.) je bilo na mokri (ali poledeneli, poškodovani) cesti 4.9936% več kot naletov v stacionarne objekte na suhi (nepoškodovani) cesti."
+    "**Ugotovitve:** Glede na ugotovitve, naleti v stacionarne objekte (kot so parkirani avtomobili, stavbe itd.) se pojavljajo 5% pogosteje na mokrih ali poškodovanih cestah v primerjavi s suhimi in nepoškodovanimi cestami.\n",
+    "Predvidevamo, da je razlog za večje število naletov na mokrih cestah, večja možnost za zdrs, zaradi zmanjšanega oprijema pnevmatik na mokri podlagi, kar lahko povzroči daljšo zavorno pot. Prav tako je treba upoštevati, da mokra cesta pogosto pomeni slabšo vidljivost in težje zaznavanje ovir na cesti."
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "1483a1ce",
    "metadata": {},
@@ -263,6 +284,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "4f4ba2a3",
    "metadata": {},
@@ -293,6 +315,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9bd3b005",
    "metadata": {},
@@ -301,6 +324,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "5a59b82b",
    "metadata": {},
@@ -309,6 +333,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "de063329",
    "metadata": {},
@@ -317,6 +342,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b95420a7",
    "metadata": {},
@@ -325,6 +351,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "ec157ec6",
    "metadata": {},
