--- a/Poročilo.ipynb
+++ b/Poročilo.ipynb
@@ -234,7 +234,7 @@
    "source": [
     "**Kateri tipi ceste so najbolj nevarni? (suha proti mokra)**\n",
     "\n",
-    "**Ugotovitve:** Glede na ugotovitve, naleti v stacionarne objekte (kot so parkirani avtomobili, stavbe itd.) se pojavljajo 5% pogosteje na mokrih ali poškodovanih cestah v primerjavi s suhimi in nepoškodovanimi cestami.\n",
+    "**Ugotovitve:** Glede na ugotovitve, se naleti v stacionarne objekte (kot so parkirani avtomobili, stavbe itd.) pojavljajo 5% pogosteje na mokrih ali poškodovanih cestah v primerjavi s suhimi in nepoškodovanimi cestami.\n",
     "Predvidevamo, da je razlog za večje število naletov na mokrih cestah, večja možnost za zdrs, zaradi zmanjšanega oprijema pnevmatik na mokri podlagi, kar lahko povzroči daljšo zavorno pot. Prav tako je treba upoštevati, da mokra cesta pogosto pomeni slabšo vidljivost in težje zaznavanje ovir na cesti."
    ]
   },
@@ -259,7 +259,9 @@
    "source": [
     "**Kako se razlikujejo poškodbe udeležencev glede na tip udeležbe(pešec, kolesar, motor itd.)?**\n",
     "\n",
-    "**Ugotovitve:** Vozniki motornih vozil so utrpeli več lažjh in hudih poškodb v primerjavi z ostalimi udeleženci v prometu.\n",
+    "**Ugotovitve:** Vozniki motornih vozil so utrpeli največ poškodb v primerjavi z ostalimi udeleženci v prometu. V splošnem je znano, da so vozniki motornih vozil izpostavljeni večjemu tveganju, zaradi manjše zaščite in mase v primerjavi z ostalimi udeleženci.\n",
+    "\n",
+    "Opazno je da najhujše poškodbe utrpijo prav tisti udeleženci z najman varnostne opreme, kamor spadajo  pešci in kolesarji.\n",
     "\n",
     "Graf:\n",
     "![Y5KFAI~1.PNG](attachment:Y5KFAI~1.PNG)"
@@ -278,6 +280,7 @@
     "**Kateri so najpogostejši udeleženci nesreče?**\n",
     "\n",
     "**Ugotovitve:** Naj pogostejši udeleženci prometnih nesreč so vozniki osebnih avtomobilov.\n",
+    "Osebni avtomobil je seveda najbolj razširjeno prevozno sredstvo, seveda pa prevozijo tudi večje razdalje in so v primerjavi z kolesarji in pešci pogostejši uporabnik cest.\n",
     "\n",
     "Graf:\n",
     "![Figure_6.png](attachment:Figure_6.png)"
