--- a/Poročilo.ipynb
+++ b/Poročilo.ipynb
@@ -311,7 +311,9 @@
    "source": [
     "**Ali uporaba varnostnega pasu vpliva na izid poškodbe?**\n",
     "\n",
-    "**Ugotovitve:** Ob uporabi varnostnega pasu je manjša verjetnost hude telesne poškodbe glede na pridobljene rezultate, v primerjavi neuporabe pasu.\n",
+    "**Ugotovitve:** Po opravljenih izračunih je bilo ugotovljeno, da uporaba varnostnega pasu vpliva na izid poškodbe v prometnih nesrečah. Na podlagi pridobljenih rezultatov je bilo ugotovljeno, da je procentualna verjetnost za nastanek hude telesne poškodbe pri uporabi varnostnega pasu bistveno manjša v primerjavi z neuporabo.\n",
+    "\n",
+    "V splošnem večina udeležencev uporablja varnosti pas.\n",
     "\n",
     "Graf:\n",
     "![pasPo%C5%A1kodba.png](attachment:pasPo%C5%A1kodba.png)"
