--- a/report.ipynb
+++ b/report.ipynb
@@ -1,16 +1,14 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e8fbdde3",
    "metadata": {},
    "source": [
-    "# POROČILO: Statistika okoliščin prometnih nesreč v Sloveniji v letu 2021 in 2022"
+    "# REPORT: Statistika okoliščin prometnih nesreč v Sloveniji v letu 2021 in 2022"
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ffa2c21b",
    "metadata": {},
@@ -22,7 +20,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "618ee329",
    "metadata": {},
@@ -33,7 +30,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9ce3a165",
    "metadata": {},
@@ -42,7 +38,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4b29b62c",
    "metadata": {},
@@ -75,7 +70,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b25b844f",
    "metadata": {},
@@ -94,7 +88,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ebdfefb3",
    "metadata": {},
@@ -133,7 +126,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "be0bff20",
    "metadata": {},
@@ -227,7 +219,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "e6b05f9e",
    "metadata": {},
@@ -239,7 +230,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "1483a1ce",
    "metadata": {},
@@ -287,14 +277,13 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "4f4ba2a3",
    "metadata": {},
    "source": [
     "**Ali lahko napovemo posledico telesne poškodbe glede na druge faktorje nesreče?**\n",
     "\n",
-    "**Ugotovitve:** Vse pomembne baze smo združili skupaj, potem smo na tem naredili RFE (Recursive Feature Elimination) kateri odstranil najšibkejše atribute in nam podal najboljše.\n",
+    "**Ugotovitve:** Vse pomembne baze smo združili skupaj v eno, na tej smo naredili RFE (Recursive Feature Elimination) kateri odstrani najšibkejše atribute in nam poda najboljše.\n",
     "Nato smo rezultate tega uporabili za učenje modela, ki je glede na le te atribute predvideli kakšna bo klasifikacija nesreče.\n",
     "Uporabili smo model RandomForestClassifier, ki kaže rezultate z 0.872 natančnostjo. Poročilo o razvrstitvi zagotavlja podrobno analizo delovanja modela za vsak razred. Vključuje meritve natančnosti, priklica, rezultat F1 in podpore. Na splošno je model zagotovljiv, s povprečno oceno F1 - 0,86."
    ]
@@ -311,7 +300,7 @@
    "source": [
     "**Ali uporaba varnostnega pasu vpliva na izid poškodbe?**\n",
     "\n",
-    "**Ugotovitve:** Po opravljenih izračunih je bilo ugotovljeno, da uporaba varnostnega pasu vpliva na izid poškodbe v prometnih nesrečah. Na podlagi pridobljenih rezultatov je bilo ugotovljeno, da je procentualna verjetnost za nastanek hude telesne poškodbe pri uporabi varnostnega pasu bistveno manjša v primerjavi z neuporabo.\n",
+    "**Ugotovitve:** Po opravljenih izračunih smo opazili, da uporaba varnostnega pasu vpliva na izid poškodbe v prometnih nesrečah. Na podlagi pridobljenih rezultatov je bilo ugotovljeno, da je procentualna verjetnost za nastanek hude telesne poškodbe pri uporabi varnostnega pasu bistveno manjša v primerjavi z neuporabo.\n",
     "\n",
     "V splošnem večina udeležencev uporablja varnosti pas.\n",
     "\n",
@@ -320,7 +309,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "9bd3b005",
    "metadata": {},
@@ -329,7 +317,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "5a59b82b",
    "metadata": {},
@@ -338,7 +325,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "de063329",
    "metadata": {},
@@ -347,7 +333,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "b95420a7",
    "metadata": {},
@@ -356,7 +341,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "ec157ec6",
    "metadata": {},
